--- a/gas-plasma.html
+++ b/gas-plasma.html
@@ -63,7 +63,7 @@
                     </li>
 
                     <li>
-                        <a id="de">Bearbetning</a>
+                        <a id="de">Tjänster</a>
                         <div class="dropdown">
                             <ul>
                                 <li>
@@ -79,7 +79,19 @@
                                 </li>
 
                                 <li>
-                                    <a href="tillagg.html">Tillägg</a>
+                                    <a href="tillagg.html#process-bockning">Bockning</a>
+                                </li>
+
+                                <li>
+                                    <a href="tillagg.html#process-svetsning">Svetsning</a>
+                                </li>
+
+                                <li>
+                                    <a href="tillagg.html#process-rullning">Rullning</a>
+                                </li>
+
+                                <li>
+                                    <a href="tillagg.html#process-annat">Annat</a>
                                 </li>
                             </ul>
                             <button class="dropdown-btn">Tillbaka</button>
@@ -170,6 +182,9 @@
         <div class="process-container" id="process-plasma">
             <div class="hS">Skärmetod</div>
             <h1>Plasmaskärning</h1>
+            <div class="machine-list">
+                <a class="machine-list-btn" href="maskinpark.html#baykal-hypertherm-260xd"><span></span>Baykal Hypertherm 260XD</a>
+            </div>
             <p>Plasmaskärningen utnyttjar en elektrisk ljusbåge mellan en elektrod, som inte smälter, och själva arbetsstycket. Elektroden är kopplad till minuspol på samma sätt som vid TIG-svetsning. Materialet i arbetsstycket behöver därför vara ledande. Ljusbågen blir koncentrerad genom att den omges av en vattenkyld dysa med trång öppning. Genom dysan strömmar plasmagas. Temperaturen i plasmaljusbågen kan bli mycket hög, typiskt upp till
                 30 000°C. Det smälta materialet blåses bort ur skärsnittet av den kraftiga plasmagasströmmen.
 
@@ -348,10 +363,25 @@
                 <li>
                     <a href="#">Gas & Plasmaskärning</a>
                 </li>
-                <li>
-                    <a href="tillagg.html">Tillägg</a>
-                </li>
             </ul>
+            </div>
+
+            <div class="inside-footer">
+                <h3>Bearbetning</h3>
+                <ul>
+                    <li>
+                        <a href="tillagg.html#process-bockning">Bockning</a>
+                    </li>
+                    <li>
+                        <a href="tillagg.html#process-svetsning">Svetsning</a>
+                    </li>
+                    <li>
+                        <a href="tillagg.html#process-rullning">Rullning</a>
+                    </li>
+                    <li>
+                        <a href="tillagg.html#process-annat">Annat</a>
+                    </li>
+                </ul>
             </div>
 
             <div class="inside-footer">
