--- a/laser.html
+++ b/laser.html
@@ -63,7 +63,7 @@
                     </li>
 
                     <li>
-                        <a id="de">Bearbetning</a>
+                        <a id="de">Tjänster</a>
                         <div class="dropdown">
                             <ul>
                                 <li>
@@ -79,7 +79,19 @@
                                 </li>
 
                                 <li>
-                                    <a href="tillagg.html">Tillägg</a>
+                                    <a href="tillagg.html#process-bockning">Bockning</a>
+                                </li>
+
+                                <li>
+                                    <a href="tillagg.html#process-svetsning">Svetsning</a>
+                                </li>
+
+                                <li>
+                                    <a href="tillagg.html#process-rullning">Rullning</a>
+                                </li>
+
+                                <li>
+                                    <a href="tillagg.html#process-annat">Annat</a>
                                 </li>
                             </ul>
                             <button class="dropdown-btn">Tillbaka</button>
@@ -162,6 +174,10 @@
         <div class="process-container" id="process">
             <div class="hS">Skärmetod</div>
             <h1>Laserskärning</h1>
+            <div class="machine-list">
+                <a class="machine-list-btn" href="maskinpark.html#amada-ensis-3015-aj"><span></span>AMADA ENSIS 3015 AJ</a>
+                <a class="machine-list-btn" href="maskinpark.html#prima-platino-cp400"><span></span>Prima Platino CP400</a>
+            </div>
             <p>Vid laserskärning används en kraftig laserkälla vars stråle fokuseras via en lins i skärhuvudet till en liten punkt nära ytan på arbetsstycket. Den intensiva strålen hettar snabbt upp materialet och ett smalt snitt uppstår.</p>      
             <p>Laserskärtekniken klarar snabba omställningar vilket ger flexibilitet i produktionen. Snitten blir gradfria och detaljerna behöver bara efterbearbetas minimalt och i vissa aplikationer och krav - inte alls. Att skära med laser är i många fall den optimala metoden för flera olika typer av produkter. Tekniken erbjuder obegränsade möjligheter då det gäller att skära figurer och former med snabbhet och precision.</p> 
             <ul>
@@ -349,10 +365,25 @@
                 <li>
                     <a href="gas-plasma.html">Gas & Plasmaskärning</a>
                 </li>
-                <li>
-                    <a href="tillagg.html">Tillägg</a>
-                </li>
             </ul>
+            </div>
+
+            <div class="inside-footer">
+                <h3>Bearbetning</h3>
+                <ul>
+                    <li>
+                        <a href="tillagg.html#process-bockning">Bockning</a>
+                    </li>
+                    <li>
+                        <a href="tillagg.html#process-svetsning">Svetsning</a>
+                    </li>
+                    <li>
+                        <a href="tillagg.html#process-rullning">Rullning</a>
+                    </li>
+                    <li>
+                        <a href="tillagg.html#process-annat">Annat</a>
+                    </li>
+                </ul>
             </div>
 
             <div class="inside-footer">
