--- a/tillagg.html
+++ b/tillagg.html
@@ -63,7 +63,7 @@
                     </li>
 
                     <li>
-                        <a id="de">Bearbetning</a>
+                        <a id="de">Tjänster</a>
                         <div class="dropdown">
                             <ul>
                                 <li>
@@ -79,7 +79,19 @@
                                 </li>
 
                                 <li>
-                                    <a href="#">Tillägg</a>
+                                    <a href="#process-bockning">Bockning</a>
+                                </li>
+
+                                <li>
+                                    <a href="#process-svetsning">Svetsning</a>
+                                </li>
+
+                                <li>
+                                    <a href="#process-rullning">Rullning</a>
+                                </li>
+
+                                <li>
+                                    <a href="#process-annat">Annat</a>
                                 </li>
                             </ul>
                             <button class="dropdown-btn">Tillbaka</button>
@@ -168,6 +180,9 @@
         <div class="process-container" id="process-bockning">
                 <div class="hS">Bearbetning</div>
                 <h1>Bockning</h1>
+                <div class="machine-list">
+                    <a class="machine-list-btn" href="maskinpark.html#amada-hfe-3i-2204"><span></span>AMADA HFE 3i 2204</a>
+                </div>
                 <p>Med en kraft upp till 220 ton, kläms materialet mellan ett pressverktyg och en dyna för att bocka kanter till förprogrammerade grader.</p>
                 <p>Med våran kantpress, som är den senaste investeringen i våran arsenal av maskiner kan vi bocka komplexa geometrier så som enkla, i tjockt och tunt material.</p>
                 <p>Vi kan bocka de flesta mjuka metaller upp till 10mm* i godstjocklek i olegerade samt legerade stålsorter.</p>
@@ -192,6 +207,9 @@
             <div id="process-rullning">
                 <div class="hS">Bearbetning</div>
                 <h1>Rullning</h1>
+                <div class="machine-list">
+                    <a class="machine-list-btn" href="maskinpark.html#sahinler-4r-hs-30-260"><span></span>Sahinler 4R HS 30-260</a>
+                </div>
                 <p>Under rullningsprocessen så klämms materialet mellan två huvudrullar och blir formade utav två formrullar som pressas mot arbetsstycket. Det är kraften och avståndet mellan formrulle och huvudrulle som bestämmer radien på det rundvalsade materialet.</p>
                 <p>Med våran rundvals kan vi rulla plåt upp till 10mm i godstjocklek och med en maxradie upp till 1500mm och en minimumradie på 300mm > 2mm godstjocklek. Vi har även möjlighet att rulla mindre radier men då i tunnare gods, samt att vi har möjlighet att rulla diverse rör och profiler.</p>
                 <p>Rullning kan göras i de flesta metalliska material.</p>
@@ -334,10 +352,25 @@
                 <li>
                     <a href="gas-plasma.html">Gas & Plasmaskärning</a>
                 </li>
-                <li>
-                    <a href="#">Tillägg</a>
-                </li>
             </ul>
+            </div>
+
+            <div class="inside-footer">
+                <h3>Bearbetning</h3>
+                <ul>
+                    <li>
+                        <a href="#process-bockning">Bockning</a>
+                    </li>
+                    <li>
+                        <a href="#process-svetsning">Svetsning</a>
+                    </li>
+                    <li>
+                        <a href="#process-rullning">Rullning</a>
+                    </li>
+                    <li>
+                        <a href="#process-annat">Annat</a>
+                    </li>
+                </ul>
             </div>
 
             <div class="inside-footer">
