--- a/foretaget.html
+++ b/foretaget.html
@@ -64,7 +64,7 @@
                     </li>
 
                     <li>
-                        <a id="de">Bearbetning</a>
+                        <a id="de">Tjänster</a>
                         <div class="dropdown">
                             <ul>
                                 <li>
@@ -80,7 +80,19 @@
                                 </li>
 
                                 <li>
-                                    <a href="tillagg.html">Tillägg</a>
+                                    <a href="tillagg.html#process-bockning">Bockning</a>
+                                </li>
+
+                                <li>
+                                    <a href="tillagg.html#process-svetsning">Svetsning</a>
+                                </li>
+
+                                <li>
+                                    <a href="tillagg.html#process-rullning">Rullning</a>
+                                </li>
+
+                                <li>
+                                    <a href="tillagg.html#process-annat">Annat</a>
                                 </li>
                             </ul>
                             <button class="dropdown-btn">Tillbaka</button>
@@ -364,10 +376,25 @@
                 <li>
                     <a href="gas-plasma.html">Gas & Plasmaskärning</a>
                 </li>
-                <li>
-                    <a href="tillagg.html">Tillägg</a>
-                </li>
             </ul>
+            </div>
+
+            <div class="inside-footer">
+                <h3>Bearbetning</h3>
+                <ul>
+                    <li>
+                        <a href="tillagg.html#process-bockning">Bockning</a>
+                    </li>
+                    <li>
+                        <a href="tillagg.html#process-svetsning">Svetsning</a>
+                    </li>
+                    <li>
+                        <a href="tillagg.html#process-rullning">Rullning</a>
+                    </li>
+                    <li>
+                        <a href="tillagg.html#process-annat">Annat</a>
+                    </li>
+                </ul>
             </div>
 
             <div class="inside-footer">
