--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                     </li>
 
                     <li>
-                        <a id="de">Bearbetning</a>
+                        <a id="de">Tjänster</a>
                         <div class="dropdown">
                             <ul>
                                 <li>
@@ -77,7 +77,19 @@
                                 </li>
 
                                 <li>
-                                    <a href="tillagg.html">Tillägg</a>
+                                    <a href="tillagg.html#process-bockning">Bockning</a>
+                                </li>
+
+                                <li>
+                                    <a href="tillagg.html#process-svetsning">Svetsning</a>
+                                </li>
+
+                                <li>
+                                    <a href="tillagg.html#process-rullning">Rullning</a>
+                                </li>
+
+                                <li>
+                                    <a href="tillagg.html#process-annat">Annat</a>
                                 </li>
                             </ul>
                             <button class="dropdown-btn">Tillbaka</button>
@@ -158,8 +170,8 @@
         <div class="customers-grid">
             <img src="customers/uddeholm_logo.png" alt="Uddeholm" loading="lazy">
             <img src="customers/valmet_logo.png" alt="Valmet" loading="lazy">
+            <img src="customers/deltabloc_logo.png" alt="Deltabloc" loading="lazy">
             <img src="customers/kms_logo.png" alt="KMS" loading="lazy">
-            <img src="customers/ecp_logo.png" alt="ECP" loading="lazy">
         </div>
     </section>
 
@@ -383,10 +395,25 @@
                 <li>
                     <a href="gas-plasma.html">Gas & Plasmaskärning</a>
                 </li>
-                <li>
-                    <a href="tillagg.html">Tillägg</a>
-                </li>
             </ul>
+            </div>
+
+            <div class="inside-footer">
+                <h3>Bearbetning</h3>
+                <ul>
+                    <li>
+                        <a href="tillagg.html#process-bockning">Bockning</a>
+                    </li>
+                    <li>
+                        <a href="tillagg.html#process-svetsning">Svetsning</a>
+                    </li>
+                    <li>
+                        <a href="tillagg.html#process-rullning">Rullning</a>
+                    </li>
+                    <li>
+                        <a href="tillagg.html#process-annat">Annat</a>
+                    </li>
+                </ul>
             </div>
 
             <div class="inside-footer">
