--- a/vatten.html
+++ b/vatten.html
@@ -174,6 +174,11 @@
         <div class="process-container" id="process">
             <div class="hS">Skärmetod</div>
             <h1>Vattenskärning</h1>
+            <div class="machine-list">
+                <a class="machine-list-btn" href="maskinpark.html#kimtech-xy-large"><span></span>Kimtech XY Large</a>
+                <a class="machine-list-btn" href="maskinpark.html#kimtech-xy-medium"><span></span>Kimtech XY Medium</a>
+                <a class="machine-list-btn" href="maskinpark.html#kimtech-xy-small"><span></span>Kimtech XY Small</a>
+            </div>
             <p>Vid vattenskärning blandas abrasivmedel med en fin vattenstråle som under extremt högt tryck skär materialet. Metoden möjliggör skärning med mycket hög precision och är användbar både vid skärning av komplicerade geometrier och vid håltagning.</p>
             <p>Vattenskärning är en kall skärmetod som inte ger någon värmepåverkan i det bearbetade materialet vilket innebär:</p>
             <ul>
@@ -443,7 +448,7 @@
                         <a href="tillagg.html#process-annat">Annat</a>
                     </li>
                 </ul>
-                </div>
+            </div>
 
             <div class="inside-footer">
                 <h3>Information</h3>
