--- a/foretaget.html
+++ b/foretaget.html
@@ -164,7 +164,6 @@
                 Vi hjälper dig med  bedömningen så att din produkt får rätt kvalitet till rätt pris.</p>
             <p>Tack vare ett välfyllt lager, med de flesta förekommande dimensionerna av plåt, kan vi hålla mycket snabba leveranstider. Vi på Ekshärads Water Jet är flexibla, vi vill ge våra kunder det de söker. Det spelar ingen roll hur komplicerad detaljen är - vi anpassar oss.</p>
             <p>Våra moderna, NC-styrda skärmaskiner klarar det mesta, komplexa figurer med snäva toleranser, runda, ovala, fyrkantiga hål i tunna och grova dimensioner, alltid med högt materialutnyttjande. Beroende på hur dina underlag ser ut importerar vi, alternativt skapar från din skiss, digitala CAD-ritningar som konverteras till NC-kod för styrning av skärmaskinerna.</p>
-
             <button class="lm-button learn-more" style="width:15rem;">
                 <span class="circle" aria-hidden="true">
                 <span class="icon arrow"></span>
@@ -175,7 +174,11 @@
                     </a>
                 </span>              
               </button>
-    </div>
+        </div>
+
+        <div class="td-container">
+            <model-viewer src="img/3d model/assm-3d.glb" tone-mapping="neutral" shadow-intensity="1" exposure=".9" shadow-softness=".6" auto-rotate camera-orbit="45deg 80deg"> </model-viewer>
+        </div>
 
     <div class="timeline-container">
 
@@ -273,9 +276,6 @@
                 <div class="spacer"></div>
             </div>
         </div>
-    </div>
-    <div class="td-container">
-        <model-viewer src="img/3d model/const1-3d.glb" tone-mapping="neutral" shadow-intensity="1" exposure=".9" shadow-softness=".6" auto-rotate camera-orbit="45deg 80deg"> </model-viewer>
     </div>
 </section>
 
