--- a/laser.html
+++ b/laser.html
@@ -267,6 +267,21 @@
                     </ul>
                 </div>
 
+                <div class="material-box">
+                    <p>Annat</p>
+                    <ul id="reveal">
+                        <li>
+                            <p>Mässing</p>
+                        </li>
+                        <li>
+                            <p>Koppar</p>
+                        </li>
+                        <li>
+                            <p>Bronslegeringar</p>
+                        </li>
+                    </ul>
+                </div>
+
             </div>
 
             <h2 id="galleri">Galleri</h2>
