--- a/tillagg.html
+++ b/tillagg.html
@@ -229,7 +229,7 @@
                 <div class="hS">Bearbetning</div>
                 <h1>Annat</h1>
                 <p>Utöver våra preliminära tillägg så har vi även möjligheten att borra, gänga och försänka, fräsa och svarva.</p>
-                <p>Vi har även möjlighet att blästra, slipa, pulverlackare, anodizera med mera.</p>
+                <p>Vi har även möjlighet att blästra, slipa, pulverlackera, anodizera med mera.</p>
                 <p>Vi på Ekshärads Water Jet siktar på att vara en så komplett lösning för våra kunder som möjligt. Hör av er så skräddarsyr vi en helhetslösning för era projekt*.</p>
 
                 <sub>* = Vi åtar oss endast arbete gällande framtagning av detaljer och konstruktioner, d.v.s att vi inte står för montage, underhåll eller dylikt.</sub>
