--- a/foretaget.html
+++ b/foretaget.html
@@ -180,14 +180,15 @@
         </div>
 
         <div class="td-container">
-            <model-viewer src="img/3d model/assm-3d.glb" tone-mapping="neutral" shadow-intensity="1" exposure="1" shadow-softness=".6" auto-rotate camera-orbit="45deg 60deg"> </model-viewer>
+            <!-- <model-viewer src="img/3d model/flange-3d.glb" tone-mapping="neutral" shadow-intensity="1" exposure="1" shadow-softness=".6" auto-rotate camera-orbit="45deg 60deg"> </model-viewer> -->
+            <model-viewer src="img/3d model/flange-3d.glb" tone-mapping="neutral" shadow-intensity="0" exposure=".8" shadow-softness="1.1" auto-rotate camera-orbit="45deg 80deg"> </model-viewer>
         </div>
 
     <div class="timeline-container">
 
         <div class="smooth-in">
             <div class="hS">Tidslinje</div>
-            <h1>Vår resa</h1>
+            <p class="flavor-header">Vår resa</p>
         </div>
 
         <div class="timeline-object">
@@ -368,7 +369,7 @@
             </div>
 
             <div class="inside-footer">
-            <h3>Bearbetning</h3>
+            <h3>Skärning</h3>
             <ul>
                 <li>
                     <a href="vatten.html">Vattenskärning</a>
