--- a/kontakt.html
+++ b/kontakt.html
@@ -190,7 +190,7 @@
 
         <div class="map-container">
             <div class="hS">Karta</div>
-            <h1>Hitta oss</h1>
+            <h2>Hitta oss</h2>
             <iframe id="gmap_canvas" src="https://maps.google.com/maps?q=Uvedsv%C3%A4gen%209,%20683%2033&t=&z=15&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
         </div>
 </section>
@@ -225,7 +225,7 @@
             </div>
 
             <div class="inside-footer">
-            <h3>Bearbetning</h3>
+            <h3>Skärning</h3>
             <ul>
                 <li>
                     <a href="vatten.html">Vattenskärning</a>
