--- a/maskinpark.html
+++ b/maskinpark.html
@@ -386,7 +386,7 @@
             </div>
 
             <div class="inside-footer">
-            <h3>Bearbetning</h3>
+            <h3>Skärning</h3>
             <ul>
                 <li>
                     <a href="vatten.html">Vattenskärning</a>
