--- a/index.html
+++ b/index.html
@@ -429,28 +429,12 @@
             </div>
 
 
-        </div>
-        <div class="copyright">
-            <div class="xf5">© Ekshärads Water Jet AB</div>
-            <div class="xf5">2022</div>
-        </div>    
+        </div>  
         <div class="footer-flavor">
             <p>EKSHÄRADS WATER JET</p>
-            <div class="marquee-container">
-                <div class="customer-marquee-item item1">
-                    <img src="customers/uddeholm_logo.png" alt="Uddeholm" loading="lazy">
-                </div>
-                <div class="customer-marquee-item item2">
-                    <img src="customers/valmet_logo.png" alt="Valmet" loading="lazy">
-                </div>
-                <div class="customer-marquee-item item3">
-                    <img src="customers/deltabloc_logo.png" alt="Deltabloc" loading="lazy">
-                </div>
-                <div class="customer-marquee-item item4">
-                    <img src="customers/kms_logo.png" alt="KMS" loading="lazy">
-                </div> 
-            </div>
-        </div>   
+            <div class="footer-flare">Precision i varje snitt</div>
+            <div class="xf5">© Ekshärads Water Jet AB - <span>2000 - 2024</span></div>
+        </div>  
     </footer>
 </div>
     <script src="js/data-scroll.js"></script>
