--- a/tillagg.html
+++ b/tillagg.html
@@ -388,10 +388,11 @@
                 </ul>
             </div>
         </div>
-        <div class="copyright">
-            <div class="xf5">© Ekshärads Water Jet AB</div>
-            <div class="xf5">2022</div>
-        </div>       
+        <div class="footer-flavor">
+            <p>EKSHÄRADS WATER JET</p>
+            <div class="footer-flare">Precision i varje snitt</div>
+            <div class="xf5">© Ekshärads Water Jet AB - <span>2000 - 2024</span></div>
+        </div>        
     </footer>
 </div>
     <script src="js/data-scroll.js"></script>
