--- a/gas-plasma.html
+++ b/gas-plasma.html
@@ -401,9 +401,12 @@
 
         </div>
         <div class="footer-flavor">
-            <p>EKSHÄRADS WATER JET</p>
-            <div class="footer-flare">Precision i varje snitt</div>
             <div class="xf5">© Ekshärads Water Jet AB - <span>2000 - 2024</span></div>
+            <!-- <p>EKSHÄRADS WATER JET</p> -->
+             <img src="img/ewj-footer.svg" alt="">
+            <div class="footer-flare">
+                <p>Precision i varje snitt</p>
+            </div>
         </div>        
     </footer>
 </div>
